# claude-explorer

./: .gitignore  CHANGELOG.md  CLA.md  CLAUDE-TESTING.md  CLAUDE.md  CONTRIBUTING.md  FUTURES.md  LICENSE  Makefile  README.md  SECURITY.md  UX.md  hatch_build.py  pyproject.toml  restart.sh
.github/workflows/: cla.yml  release.yml  test.yml
PLANS/: 2026.05.03-MANUAL-TEST-PLAN.md  2026.05.04-MANUAL-TEST-PLAN.md  2026.05.05-9-issues-prefs-attachment-cache.md  2026.05.05-MANUAL-TEST-PLAN.md  2026.05.06-MANUAL-TEST-PLAN.md  2026.05.06-mock-data-conversion.md  2026.05.07-MANUAL-TEST-PLAN.md  2026.05.07-backend-test-enhancement.md  2026.05.07-backend-test-gaps.md  2026.05.07-composable-filters.md  2026.05.07-filter-behavior-redesign.md  2026.05.07-frontend-api-contract.md  2026.05.07-spec-driven-filter-tests.md  2026.05.08 BACKEND TEST PLAN.md  2026.05.08-MANUAL-TEST-PLAN.md  2026.05.09-COMPREHENSIVE-MANUAL-TEST-PLAN.md  2026.05.09-MANUAL-TEST-PLAN.md  2026.05.09-v1-readiness-sweep.md  2026.05.10-search-fts5.md  2026.05.13-pypi-publish-scope.md  2026.05.13-slash-and-tools-audit-findings.md  2026.05.13-slash-and-tools-display-spec.md  2026.05.14-search-scope-propagation-spec.md  2026.05.15-fsevents-watchdog-migration.md  2026.05.15-recover-cc-images-from-time-machine.md  2026.05.18-backend-architecture-cleanup.md  2026.05.18-config-corruption-safe-mode.md  2026.05.18-perf-polish.md  2026.05.18-test-hardening.md  2026.05.19-public-release-solidity-sweep.md  2026.05.20-pre-push-final-pass.md  2026.05.24-SUPPORT-COWORK-SESSIONS.md  2026.05.25-medium-docs-cowork-followup.md  2026.05.26-medium-docs-update-plan.md  2026.05.26-watcher-install-detection.md  2026.05.28-ultrareview-of-rd-cleanup.md  2026.05.29-cowork-source-icon-f12.md  2026.05.29-offline-attachment-cache-fallback.md  2026.05.30-STRICT-CODE-QUALITY-REVIEW-UNFUCK-THE-FIRST-FIXES.md  2026.05.30-STRICT-CODE-QUALITY-REVIEW-UNFUCK-THE-SECOND-FIXES.md  (+40 more)
PLANS/__Olde/: cowork-multi-org.md  explorer-improvements-investigation.md  part2_revision_followups.md  search-sidebar.md
PLANS/articles/: 2026.05.26-medium-docs-update-execution-plan.md  2026.05.26-medium-docs-update-plan.md  2026.05.27-react-doctor-notes.md  2026.05.29-part2-council-review.md  medium-article.md  medium-articles.md  part2-userdoc-twin-reconciliation.md  part2_codereview_audit.md  part2_revision_plan.md  part3-tuning-loop-run.md  part3_mcp_server_plan.md  part6_llm_council_draft.md  part6_llm_council_plan.md  part_1_overview.md  part_2_web_app.md  part_3_mcp_server.md
PLANS/future_articles/: llm_council.md
PROCESS/: 00_session_inventory.md  90_themes.md  91_memorable_quotes.md  92_timeline.md  93_use_cases.md  99_styleguide.md  99_voice_cheatsheet.md  README.md  canva_deck_styleguide.md
PROCESS/76fe578b/: summary.md
PROCESS/a70251a5/: _build_outline.py  _phase_detect.py  outline.jsonl  outline_digest.md  phase_01_intent_and_planning.md  phase_03_initial_scaffold_backend_ui.md  phase_04_fetcher_and_mitmproxy_capture.md  phase_05_file_and_pdf_attachments.md  phase_06_playwright_e2e_harness.md  phase_07_viewer_tool_calls_and_branches.md  phase_08_open_in_desktop_and_edit_retry.md  phase_09_fetcher_403_and_rebrand.md  phase_10_claude_code_local_files_unification.md  phase_11_perf_caching_tool_results.md  phase_12_caveat_filter_and_rename_explorer.md  phase_13_playwright_login_alt_credential.md  phase_14_project_grouping_and_sidebar.md  phase_15_caveat_titles_and_exporter_cleanup.md  phase_16_connection_status_popup.md  phase_17_dev_env_noise_and_pkill_permission.md  phase_18_settings_page_kbd_dark_mode_plan.md  phase_19_keyboard_and_search_navigation.md  phase_20_mcp_server_design_and_build.md  phase_21_mcp_server_selftest.md  phases.md
PROCESS/skipped/: gmail_sessions.md
articles/: medium-toc-part2-deep-dive.md  medium-toc-part2-user-guide.md  medium-toc-part3-deep-dive.md  medium-toc-part3-user-guide.md  part_1_overview.md  part_2_web_app.md  part_2_web_app_quickstart.md  part_2_web_app_userdoc.md  part_3_mcp_server.md  part_3_mcp_server_quickstart.md  part_3_mcp_server_userdoc.md
assets/: mcpb-README.md
backend/: agent_session_io.py  cache.py  cc_agent_reader.py  cc_image_cache.py  cc_image_markers.py  cc_image_watcher.py  cc_jsonl_io.py  cc_message_transforms.py  cc_watcher.py  claude_code_reader.py  cli_style.py  compact_prefixes.py  config.py  cowork_reader.py  deps.py  doctor.py  export.py  fetch_pipeline.py  main.py  mcp_config_detect.py  mcp_config_install.py  models.py  notify.py  parsing.py  scheduled_fetch.py  scheduled_fetch_status.py  search.py  search_index.py  search_text.py  store.py  summary_cache.py  watcher_logging.py  watcher_status.py
backend/exporters/: __init__.py  _shared.py  bundle.py  markdown.py  pdf.py
backend/routers/: bookmarks.py  config.py  conversations.py  export.py  fetch.py  files.py  orgs.py  preferences.py  search.py  watcher_health.py
backend/tests/: _security_helpers.py  builders.py  conftest.py  test_api_boundaries.py  test_api_config_corrupt_reason.py  test_attachments.py  test_attachments_security.py  test_bookmarks.py  test_builders.py  test_cache_logging.py  test_canned_response_fold_and_prelude.py  test_cc_compact_marker_text_fallback.py  test_cc_detail_cache.py  test_cc_image.py  test_cc_image_warm.py  (+140 more)
benchmarks/: README.md  bench_perf.py  bench_search_paths.py  run_all.py
cli/: __init__.py  main.py  scheduled_fetch_install.py  watcher.py
fetcher/: README.md  bulk_fetch.py  cli.py  credentials.py  http_retry.py  local_claude_code.py  migrate_to_v2.py  mitmproxy_addon.py  paths.py  playwright_capture.py  run_fetch.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  react-doctor.config.json  vite.config.ts  vitest.config.ts
mcp_server/: SPEC.md  __init__.py  server.py
scripts/: bench_perf.py  bench_search_paths.py  build-mcpb.py  build_part3_deck.py  check-article-formats.py  check-cleanup-period.py  generate_e2e_fixtures.py  macos-restore-claude-projects.py  mcpb_import_closure.py  medium-prep.py
utils/: restore-deleted-sessions-and-images.sh
(+359 files in other folders)
