[project]
name = "claude-desktop-message-exporter"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "weasyprint>=62.0",
    "curl_cffi>=0.7",
    "orjson>=3.10",
    "playwright>=1.40",
    "mitmproxy>=10.0",
    "fastmcp>=3.0",
]

[project.scripts]
claude-exporter = "fetcher.cli:main"

[tool.setuptools.packages.find]
include = ["fetcher*", "backend*", "mcp_server*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "respx>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["fetcher/tests", "backend/tests"]
asyncio_mode = "auto"
