[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "claude-explorer"
dynamic = ["version"]
description = "Local archive + web viewer + MCP server for Claude Desktop and Claude Code conversations. Browse, search, export, and let Claude query its own history."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    {name = "Raymond Peck"},
]
keywords = [
    "claude",
    "anthropic",
    "llm",
    "archive",
    "viewer",
    "mcp",
    "claude-code",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "weasyprint>=62.0",
    "curl_cffi>=0.7",
    "orjson>=3.10",
    "playwright>=1.40",
    # mitmproxy is conditional: skipped on Windows ARM64 because mitmproxy-rs
    # (the Rust HTTP/3 stack) has no prebuilt arm64-pc-windows-msvc wheels and
    # would require ~6 GB Visual Studio Build Tools + ~45 min compile from
    # source. Skipping it on that platform falls through to the browser-based
    # capture (the default `claude-explorer capture` without --proxy), which
    # works without mitmproxy. See PLANS/2026.06.12-V2-cookie-storage-read.md
    # for the longer-term V2 plan to remove mitmproxy entirely.
    "mitmproxy>=10.0; sys_platform != 'win32' or platform_machine != 'ARM64'",
    "fastmcp>=3.0",
    "portalocker>=2.8",
    "watchdog>=4.0",
    "platformdirs>=4.0",
]

[project.urls]
Homepage = "https://github.com/rpeck/claude-explorer"
Documentation = "https://github.com/rpeck/claude-explorer#readme"
Source = "https://github.com/rpeck/claude-explorer"
Issues = "https://github.com/rpeck/claude-explorer/issues"
Changelog = "https://github.com/rpeck/claude-explorer/releases"

[project.scripts]
claude-explorer = "cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "pytest-xdist>=3.5",
    "respx>=0.21",
    "pypdf>=4.0",
]

# ----- Hatchling build configuration ------------------------------------------
# Version is the single source of truth at mcp_server/__init__.py:__version__.
# See PLANS/2026.06.04-mcpb-bundle.md §9 (Version contract): bumping
# mcp_server.__version__ updates pip + MCP serverInfo + MCPB manifest together.
[tool.hatch.version]
path = "mcp_server/__init__.py"

# Wheel target: include only what an end user needs at runtime. The frontend
# bundle is injected at build time by hatch_build.py via build_data["force_include"]
# (so it doesn't need to live in the source tree or be git-tracked).
[tool.hatch.build.targets.wheel]
packages = ["backend", "cli", "fetcher", "mcp_server"]
exclude = [
    "**/tests/**",
    "**/__pycache__/**",
    "**/*.pyc",
    "**/conftest.py",
]

# Sdist target: include everything a contributor needs to rebuild the wheel
# from source — including the frontend sources so the build hook can run.
[tool.hatch.build.targets.sdist]
include = [
    "backend/**/*.py",
    "cli/**/*.py",
    "fetcher/**/*.py",
    "mcp_server/**/*.py",
    "frontend/src/**",
    "frontend/public/**",
    "frontend/index.html",
    "frontend/vite.config.ts",
    "frontend/package.json",
    "frontend/package-lock.json",
    "frontend/tsconfig*.json",
    "frontend/eslint.config.js",
    "frontend/tailwind.config.*",
    "frontend/postcss.config.*",
    "hatch_build.py",
    "pyproject.toml",
    "README.md",
    "LICENSE",
    "CONTRIBUTING.md",
    "CLA.md",
]
exclude = [
    "**/tests/**",
    "**/__pycache__/**",
    "**/*.pyc",
    "**/node_modules/**",
    "frontend/dist/**",
    "frontend/playwright-report/**",
    "frontend/test-results/**",
    # CLAUDE.md / CLAUDE-TESTING.md are agent-coordination docs (kept in
    # git for contributors who use Claude Code), not user-facing project
    # docs. They reference internal LLM-council workflow and would just
    # clutter the sdist on PyPI. Excluded from sdist only — still in repo.
    "CLAUDE.md",
    "CLAUDE-TESTING.md",
]

# Custom build hook that bundles the frontend into the wheel. Only fires for
# the wheel target (see hat_build.py guard).
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.pytest.ini_options]
testpaths = ["fetcher/tests", "backend/tests"]
asyncio_mode = "auto"
# Parallel execution via pytest-xdist (PLANS/2026.05.18-test-hardening.md
# task C3). Cuts the full backend suite from ~98 s single-threaded to
# ~45 s on a typical laptop. Tests are already worker-safe via pytest's
# per-worker `tmp_path` (the `isolated_data_dir` fixture is built on top
# of `tmp_path`, so each worker gets its own data dir).
#
# `-m "not serial"` deselects wall-clock-sensitive tests (benchmarks +
# shutdown-latency assertions). Those need to run without CPU contention
# from sibling workers — see `make test` for the two-pass runner that
# does parallel + serial in one invocation.
#
# Override for interactive debugging:
#   uv run pytest -n0 --pdb backend/tests/test_foo.py
# `-n0` runs in the main process so `--pdb` / `breakpoint()` work.
addopts = "-n auto -m 'not serial'"
markers = [
    "serial: wall-clock-sensitive test; runs only outside `-n auto` to avoid CPU-contention flakes. `make test` runs the parallel pass + a follow-up serial pass via `-n0 -m serial`.",
]
